feat: add more security and fix a lot of bugs